[project]
name = "precipice-classification-dashboard"
version = "0.1.0"
description = "Streamlit presentation and exploration dashboard for PRECIPICE GNSS-IR classification progress."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.53.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "pillow>=10.0.0",
]

[tool.uv]
package = false
